--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-	<img class="wave" src="img/wave.png">
+	<img class="wave" src="img/svgtopng/Confetti-Doodles.png">
 	<div class="container">
 		<div class="img">
 			<img src="img/undraw_Gifts_re_97j6.svg">
@@ -16,7 +16,7 @@
 		<div class="login-content">
 			<form action="index.html">
 				<img src="img/avatars.svg">
-				<h2 class="title">Here's your Surprise Chotti</h2>
+				<h2 class="title" style="color:#FFFF64">Here's your Surprise Chotti</h2>
             	<input type="submit" class="btn" value="Welcome">
             </form>
         </div>
