--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<div class="login-content">
 			<form action="index.html">
 				<img src="img/avatars.svg">
-				<h2 class="title" style="color:#FFFF64">Here's your Surprise Chotti</h2>
+				<h2 class="title" style="color:#FFFF64"><a href="https://game-akd.herokuapp.com/">Here's your Surprise Chotti</a></h2>
             	<input type="submit" class="btn" value="Welcome">
             </form>
         </div>
