--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 		<div class="login-content">
 			<form action="index.html">
 				<img src="img/avatars.svg">
-				<h2 class="title" style="color:#FFFF64"><a href="https://game-akd.herokuapp.com/">Here's your Surprise Chotti</a></h2>
-            	<input type="submit" class="btn" value="Welcome">
+				<h2 class="title" style="color:#FFFF64">Here's your Surprise Chotti</h2>
+            	<a href="https://game-akd.herokuapp.com/"><input type="submit" class="btn" value="Welcome"></a>
             </form>
         </div>
     </div>
