--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<form action="index.html">
 				<img src="img/avatars.svg">
 				<h2 class="title" style="color:#FFFF64">Here's your Surprise Chotti</h2>
-            	<a href="https://game-akd.herokuapp.com/"><input type="submit" class="btn" value="Welcome"></a>
+            	<a href="https://game-akd.herokuapp.com/"><button type="submit" class="btn" >Welcome</button></a>
             </form>
         </div>
     </div>
